--- a/TPC3.ipynb
+++ b/TPC3.ipynb
@@ -14,7 +14,7 @@
     "#####  Data de fim: 2021-10-24\n",
     "#####  Supervisor:José Carlos Leite Ramalho, jcr@di.uminho.pt\n",
     "#####  Autor: Marta Cristina Nunes Silva A92041\n",
-    "#####  Resumo: Este trabalho tem como objetivo desenvolver uma lista em que o computador a ordena utilizando o bubble sort sem utilizar \"sort\" para ordenar a lista. "
+    "#####  Resumo: Este trabalho tem como objetivo introduzir uma lista em que o computador a ordena utilizando o bubble sort sem utilizar \"sort\" para ordenar a lista. "
    ]
   },
   {
