--- a/TPC3.ipynb
+++ b/TPC3.ipynb
@@ -9,12 +9,12 @@
     "\n",
     "### Algoritmos\n",
     "\n",
-    "#####  Título: Bubble sort\n",
-    "#####  Data de início: 2021-10-18\n",
-    "#####  Data de fim: 2021-10-24\n",
-    "#####  Supervisor:José Carlos Leite Ramalho, jcr@di.uminho.pt\n",
-    "#####  Autor: Marta Cristina Nunes Silva A92041\n",
-    "#####  Resumo: Este trabalho tem como objetivo introduzir uma lista em que o computador a ordena utilizando o bubble sort sem utilizar \"sort\" para ordenar a lista. "
+    "*  Título: Bubble sort\n",
+    "*  Data de início: 2021-10-18\n",
+    "*  Data de fim: 2021-10-24\n",
+    "*  Supervisor:José Carlos Leite Ramalho, jcr@di.uminho.pt\n",
+    "*  Autor: Marta Cristina Nunes Silva A92041\n",
+    "*  Resumo: Este trabalho tem como objetivo introduzir uma lista em que o computador a ordena utilizando o bubble sort sem utilizar \"sort\" para ordenar a lista. "
    ]
   },
   {
